k8s 部署服务发现工具完善

--- a/micservices/projects/micservice-component/consul/register/register-service.yaml
+++ b/micservices/projects/micservice-component/consul/register/register-service.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   containers:
     - name: register
-      image: register
+      image: registry.cn-hangzhou.aliyuncs.com/luochunyun/register
       ports:
         - containerPort: 9527
       imagePullPolicy: IfNotPresent
