k8s 部署服务发现注册组件完善

--- a/micservices/projects/micservice-component/consul/register/register-service.yaml
+++ b/micservices/projects/micservice-component/consul/register/register-service.yaml
@@ -15,7 +15,8 @@ spec:
         - name: consulAddr
           valueFrom:
             fieldRef:
-              fieldPath: spec.nodeName
+              fieldPath: status.hostIP
+#              fieldPath: spec.nodeName
         - name: serviceAddr
           valueFrom:
             fieldRef:
