--- a/cicd/k8s/case/mysql/statefulset/mysql-service.yaml
+++ b/cicd/k8s/case/mysql/statefulset/mysql-service.yaml
@@ -1,3 +1,4 @@
+# Headless service for stable DNS entries of StatefulSet members.
 apiVersion: v1
 kind: Service
 metadata:
@@ -12,6 +13,8 @@ spec:
   selector:
     app: mysql
 ---
+# Client service for connecting to any MySQL instance for reads.
+# For writes, you must instead connect to the master: mysql-0.mysql.
 apiVersion: v1
 kind: Service
 metadata:
