feat: log list to web

--- a/crontab/master/configs/config.yaml
+++ b/crontab/master/configs/config.yaml
@@ -12,3 +12,15 @@ etcd:
     endpoints:
       - "127.0.0.1:2379"
     dialTimeout: 5000
+
+# mongodb 配置
+mongodb:
+  uri: "mongodb://root:123456@127.0.0.1:27017"
+  connectionTimeout: 5000
+
+#  log db与collection配置
+log:
+  #  存储的数据库名称
+  db: "cron"
+  #  存储的表名称
+  collection: "log"
