--- a/micro-with-containerization/docker-elk/docker-stack.yaml
+++ b/micro-with-containerization/docker-elk/docker-stack.yaml
@@ -1,12 +1,12 @@
 version: '3.3'
 services:
   elasticsearch:
-    image: elasticsearch:8.6.2
+    image: elasticsearch:7.17.9
     container_name: elasticsearch
     privileged: true
     environment:
       - "discovery.type=single-node"
-      - "ES_JAVA_OPTS=-Xms2g -Xmx2g"
+      - "ES_JAVA_OPTS=-Xms4g -Xmx4g"
       - "ELASTIC_PASSWORD=elastic"
       - "TAKE_FILE_OWNERSHIP=true"
       - "network.publish_host=_eth0_"
@@ -15,7 +15,7 @@ services:
         soft: -1
         hard: -1
     volumes:
-      - ./tempdata/conf/elasticsearch.yaml:/usr/share/elasticsearch/config/elasticsearch.yaml
+      - ./tempdata/conf/elasticsearch.yml:/usr/share/elasticsearch/config/elasticsearch.yml
       - ./tempdata/data/elasticsearch:/usr/share/elasticsearch/data
       - ./tempdata/log/elasticsearch:/usr/share/elasticsearch/logs
     ports:
@@ -24,15 +24,15 @@ services:
 
 
   logstash:
-    image: logstash:8.6.2
+    image: logstash:7.17.9
     container_name: logstash
     privileged: true
     ports:
       - "5044:5044"
-      - "5000:5000"
+      #- "5000:5000"
       - "9600:9600"
     volumes:
-      - ./tempdata/conf/logstash.yaml:/usr/share/logstash/config/logstash.yaml
+      - ./tempdata/conf/logstash.yml:/usr/share/logstash/config/logstash.yml
       - ./tempdata/logstash/pipeline/logstash.conf:/usr/share/logstash/pipeline/logstash.conf
     environment:
       LS_JAVA_OPTS: "-Xmx1g -Xms1g"
@@ -40,7 +40,7 @@ services:
       - elasticsearch
 
   kibana:
-    image: kibana:8.6.2
+    image: kibana:7.17.9
     container_name: kibana
     environment:
       SERVER_HOST: 0.0.0.0
@@ -48,12 +48,12 @@ services:
     ports:
       - "5601:5601"
     volumes:
-      - ./tempdata/conf/kibana.yaml:/usr/share/kibana/config/kibana.yaml
+      - ./tempdata/conf/kibana.yml:/usr/share/kibana/config/kibana.yml
     depends_on:
       - elasticsearch
 
 #  filebeat:
-#    image: elastic/filebeat:8.6.2
+#    image: elastic/filebeat:7.17.9
 #    container_name: filebeat
 #    command: filebeat -e -strict.perms=false
 #    user: root
